The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

*  Please also check out our related projects   *
* http://joda-time.sourceforge.net/related.html *


Enhancements since 1.5
----------------------


Compatibility with 1.5
----------------------
Binary compatible - Yes

Source compatible - Yes

Serialization compatible - Yes

Data compatible - Yes, except
  - DateTimeZone data updated to version 2007k

Semantic compatible - Yes


Deprecations since 1.5
----------------------


Bug fixes since 1.5
-------------------
- DateTimeFormat.forFields(List) method can't handle immutable [1877843]
  Fix so that the method does not throw an exception when an unmodifiable
  list is passed in

- Fixed offset time zones calculated incorrect periods
  ZonedChronology.ZonedDuration.isPrecise() did not take into account
  the decorated isPrecise() value. This meant that date fields for fixed
  offset time zones were always considered precise. The result was periods
  containing months and years when they should not have done.

- ZonedChronology (regression from 1.4) [1887104]
  Fix to roundFloor/roundCeiling
  Bug affected DST cutover in Autumn for time fields (not date fields)
  
- Clarify Javadoc time zone formats
  Time zone formats were incorrectly documented as 'Z' instead of 'ZZ'
  Javadoc only change

- DateTimeZone (regression from 1.4) [fix also available in v1.5.2]
  Fix getOffsetFromLocal DST gap adjustment
  Bug affected parsing of DST cutover in Autumn

- Parsing (regression from 1.4) [1839440] [fix also available in v1.5.1]
  Support parsing all upper-case and all lower-case text

- Javadoc clarity enhancements [fix also available in v1.5.1]
  - Constants in Years/Months/Weeks/Days/Hours/Minutes/Seconds etc.
  - Period/Interval Object constructors


Feedback
--------
All feedback is welcomed via the joda-interest mailing list.

The Joda team